<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="pe.gob.inei.cuestionarioena.MenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin15dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="150dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_encuesta"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/texto_grande"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_curso"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/texto_medium"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:layout_marginTop="@dimen/layout_margin10dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/agro"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginLeft="@dimen/layout_margin20dp"
                android:layout_marginRight="@dimen/layout_margin20dp"
                android:padding="@dimen/layout_margin10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CONTROLES DE LECTURA"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/texto_grande"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/borde_menu"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin20dp"
                android:padding="@dimen/layout_margin20dp"
                android:background="@drawable/borde_menu"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin5dp">
                    <Button
                        android:id="@+id/btnControln1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control01_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:id="@+id/btnControln2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control02_nombre"
                        android:theme="@style/RaisedButtonDark"/>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control03_nombre"
                        android:theme="@style/RaisedButtonDark" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control04_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control05_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control06_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control07_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control08_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control09_nombre"
                        android:theme="@style/RaisedButtonDark"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/control10_nombre"
                        android:theme="@style/RaisedButtonDark"/>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
